# enter-sandbox

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.ja.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
agentbox-core/: Cargo.toml  build.rs
agentbox-core/src/: check_imports.rs  lib.rs  runtime.rs  vfs.rs
docs/: PLAN.md  PROMPT.md  RESEARCH.md  SPEC.md
python/agentbox/: __init__.py  _core.pyi
runner-wasm/: Cargo.toml
runner-wasm/src/: main.rs
tests/python/: test_core.py  test_sandbox.py
