[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "agentbox"
version = "0.1.0"
authors = [
    { name = "Project EnterSandBox" },
]
description = "High-performance AI Agent Sandbox"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]

[tool.maturin]
features = ["extension-module"]
# The module name in Python (the .so/.pyd file)
module-name = "agentbox._core"
# Where the python code lives
python-source = "python"
manifest-path = "agentbox-core/Cargo.toml"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
