[package]
name = "agentbox-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentbox_core"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310"] }
wasmtime = "29.0"
wasmtime-wasi = "29.0"
wasi-common = "29.0"
anyhow = "1.0"


